gnome-settings-daemon (2.91.8-2) UNRELEASED; urgency=low

  * debian/patches/02_missing_libs.patch:
    + Removed. This was fixed upstream in a different way a long time
      ago. The patch was also disabled on 2.91.5.1-1 without any bad
      consequences.
  * debian/patches/13_monitor_kfreebsd.patch:
    + Forwarded upstream, added headers.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 16 Jan 2011 00:23:53 +0000

gnome-settings-daemon (2.91.8-1) experimental; urgency=low

  [ Sjoerd Simons ]
  * Enable pulseaudio support
  * Enable the settings d-conf <-> gconf bridge
  * d/p/0001-Ensure-the-volume-doesn-t-underflow-and-wrap-around.patch
    + Added. Fix a bug where it was possible to lower the volume below zero,
      causing it to wrap-around to MAXUINT.

  [ Emilio Pozuelo Monfort ]
  * New upstream release.
    + debian/control.in:
      - Update build dependencies.
  * debian/rules:
    - Remove duplicated list-missing target and utils.mk include.
    - Include autoreconf.mk before debhelper.mk to not leave cruft when
      running clean.
  * debian/control.in:
    - Standards-Version is 3.9.1, no changes needed.
    - Drop old Replaces.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 12 Jan 2011 22:48:04 +0000

gnome-settings-daemon (2.91.5.1-2) experimental; urgency=low

  * Make the nautilus-data depend versioned

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 12 Dec 2010 14:32:07 +0000

gnome-settings-daemon (2.91.5.1-1) experimental; urgency=low

  * New upstream release
  * debian/control.in: Update build-depends to gnome 3.0 versions
  * debian/patches/01_xrdb.patch
    - Removed. g-s-d no longer manages xrdb
  * debian/patches/03_maintainer_mode.patch
    - Removed. Fixed upstream
  * debian/patches/10_clipboard_crash.patch
    - Removed. Fixed upstream.
  * debian/patches/12_monitor_network_fs.patch
    - Removed. Fixed upstream
  * debian/patches/13_monitor_kfreebsd.patch
    - Updated
  * debian/patches/20_gstreamer.patch